--- a/WebAppfor_AW_worker/Views/Home/Index.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
     <div class="container">
         <div class="box">
             <img src="~/images/avatar-01.png" alt="" />
-            <h3>Mohamed Farag</h3>
+            <h3>Nabila Hany </h3>
             <span class="title">Full Stack Developer</span>
             <div class="rate">
                 <i class="filled fas fa-star"></i>
