--- a/WebAppfor_AW_worker/Views/Home/Index.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/Index.cshtml
@@ -184,7 +184,7 @@
         </div>
         <div class="box">
             <img src="~/images/avatar-02.png" alt="" />
-            <h3>Mohamed Ibrahim</h3>
+            <h3>Maria Emad</h3>
             <span class="title">Full Stack Developer</span>
             <div class="rate">
                 <i class="filled fas fa-star"></i>
