--- a/WebAppfor_AW_worker/Views/Home/Index.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/Index.cshtml
@@ -200,7 +200,7 @@
         </div>
         <div class="box">
             <img src="~/images/avatar-03.png" alt="" />
-            <h3>Shady Nabil</h3>
+            <h3>kareem asuity</h3>
             <span class="title">Full Stack Developer</span>
             <div class="rate">
                 <i class="filled fas fa-star"></i>
