the box of quality i return it back again in the index page of the projrect

--- a/WebAppfor_AW_worker/Views/Home/Index.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/Index.cshtml
@@ -5,6 +5,15 @@
 <!-- Start Landing -->
 <div class="landing">
     <div class="container">
+        <div class="box quality">
+            <img src="~/images/features-01.jpg" alt=""/>
+        </div>
+        <h2>quality</h2>
+        <p>
+        the quality is important feature if you want to success and continue in this.so we cant ignore it 
+        </p>
+        <a href="#">more</a>
+    </div>        
         <div class="text">
             <h1>Welcome, to AW World</h1>
             <p>
