--- a/WebAppfor_AW_worker/Views/Shared/_Layout3.cshtml
+++ b/WebAppfor_AW_worker/Views/Shared/_Layout3.cshtml
@@ -27,6 +27,7 @@
                 <li><a asp-action="C_complain" asp-controller="User">Create Complain</a></li>
                 <li><a asp-action="Update" asp-controller="User">Your Account</a></li>
                 <li><a asp-action="Logout" asp-controller="User">Logout</a></li>
+                <li><a asp-action="help" asp-controller="User">help</a></li>
             </ul>
         </div>
     </div>
