Update Worker Area

--- a/WebAppfor_AW_worker/Views/User/srv_req.cshtml
+++ b/WebAppfor_AW_worker/Views/User/srv_req.cshtml
@@ -33,7 +33,7 @@
                 <div class="worker">
                     
                     <div class="avatar txt-c">
-                        <img src="~/images/avatar-05.png" alt="" />
+                        <img src="~/images/@item.WrPhoto" alt="" />
                         <h4 class="m-0">@item.WrName</h4>
                         <p>@item.JobName</p>
                     </div>
