--- a/WebAppfor_AW_worker/Views/Home/Index.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/Index.cshtml
@@ -4,16 +4,7 @@
 
 <!-- Start Landing -->
 <div class="landing">
-    <div class="container">
-        <div class="box quality">
-            <img src="~/images/features-01.jpg" alt=""/>
-        </div>
-        <h2>quality</h2>
-        <p>
-        the quality is important feature if you want to success and continue in this.so we cant ignore it 
-        </p>
-        <a href="#">more</a>
-    </div>        
+    <div class="container">       
         <div class="text">
             <h1>Welcome, to AW World</h1>
             <p>
@@ -33,7 +24,16 @@
 <div class="features" id="features">
     <h2 class="main-title">Features</h2>
     <div class="container">
-
+        <div class="box quality">
+            <div class="img-holder">
+                <img src="~/images/features-01.jpg" alt="" />
+            </div>
+            <h2>quality</h2>
+            <p>
+                the quality is important feature if you want to success and continue in this.so we cant ignore it
+            </p>
+            <a href="#">more</a>
+        </div>
         <div class="box time">
             <div class="img-holder">
                 <img src="~/images/features-02.jpg" alt="" />
@@ -64,7 +64,7 @@
     <h2 class="main-title">Articles</h2>
     <div class="container">
         <div class="box">
-            <img src="~/images/1.use it/awAir Condition.jpg" alt="" />
+            <img src="~/images/1.use it/awWind turbine technician.jpg" alt="" />
             <div class="content">
                 <h3> Air conditioning technician</h3>
                 <p>
