the task about area is done, i finish the area about user and consist controller,view and model

--- a/WebAppfor_AW_worker/Views/User/Update.cshtml
+++ b/WebAppfor_AW_worker/Views/User/Update.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebAppfor_AW_worker.Models
 
-@model WebAppfor_AW_worker.Models.UserTbl
+@model WebAppfor_AW_worker.Models.UserTbl1
 @{
     ViewData["Title"] = "Update";
     Layout = "~/Views/Shared/_Layout3.cshtml";
