--- a/WebAppfor_AW_worker/Views/Worker/GetInfoUser.cshtml
+++ b/WebAppfor_AW_worker/Views/Worker/GetInfoUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAppfor_AW_worker.Models.UserTbl
+﻿@model WebAppfor_AW_worker.Models.UserTbl1
 
     <!-- Start pop-confirm price -->
 <div id="abc" style="display:block;">
