--- a/WebAppfor_AW_worker/Areas/User/Views/User/srv_req.cshtml
+++ b/WebAppfor_AW_worker/Areas/User/Views/User/srv_req.cshtml
@@ -1,4 +1,5 @@
-﻿@model dynamic
+﻿@using WebAppfor_AW_worker.Models;
+@model dynamic
 @{
     ViewData["Title"] = "srv_req";
     Layout = "~/Views/Shared/_Layout3.cshtml";
@@ -23,7 +24,7 @@
                 {
                     <li><a asp-route-id="@item.RegionId" asp-action="SetRegionId">@item.RegionName</a></li>
                 }
-                
+
             </ul>
         </div>
 
@@ -31,7 +32,7 @@
             @foreach (WorkerTbl item in Model.Workers)
             {
                 <div class="worker">
-                    
+
                     <div class="avatar txt-c">
                         <img src="~/images/@item.WrPhoto" alt="" />
                         <h4 class="m-0">@item.WrName</h4>
@@ -42,7 +43,7 @@
                         <div>
                             <a class="w-btn bg-blue c-white btn-shape" asp-route-id="@item.WrId" asp-action="SetWorkerProfileId" asp-controller="User">Profile</a>
                             <a class="w-btn c-white btn-shape" asp-route-id="@item.WrId" asp-action="SetWorkerId" asp-controller="User">Select</a>
-                           
+
                         </div>
                     </div>
                 </div>
