--- a/WebAppfor_AW_worker/Views/Home/u_login.cshtml
+++ b/WebAppfor_AW_worker/Views/Home/u_login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAppfor_AW_worker.Models.UserTbl
+﻿@model WebAppfor_AW_worker.Models.UserTbl1
 @{
 	ViewData["Title"] = "u_login";
 	Layout = "~/Views/Shared/_Layout1.cshtml";
