--- a/WebAppfor_AW_worker/Areas/User/Views/User/C_complain.cshtml
+++ b/WebAppfor_AW_worker/Areas/User/Views/User/C_complain.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebAppfor_AW_worker.Models.ComplaintTbl
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model WebAppfor_AW_worker.Models.ComplaintTbl
 @{
     Layout = "~/Views/Shared/_Layout3.cshtml";
     var errorMessage = TempData["errorMessage"]?.ToString();
@@ -25,7 +26,7 @@
             <p class="mt-0 mb-20 c-grey fs-15">Please Write Your Complain or Suggestion here</p>
             <form method="post">
                 <div>
-                    <input type="number" placeholder="Request id" asp-for="ReqId" />
+                    <input type="number" placeholder="Request id" asp-for="ReqId"  />
                 </div>
                 <div>
                     <textarea asp-for="ComDescription" placeholder="Description"></textarea>
@@ -35,9 +36,8 @@
                 </div>
             </form>
             <div>
-                <a class="btn btn-secondary" asp-action="Index" asp-controller="User">Back</a>
+                <a class="btn btn-secondary" asp-area="User" asp-action="Index" asp-controller="User">Back</a>
             </div>
         </div>
     </div>
 </div>
-
